UtahLiveDataTest/src/objects/LEAPublicSchools__c.object
<CustomObject>
    <fields>
        <fullName>InternalUniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>InternalUniqueId</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LEANumberforREI__c</fullName>
        <label>LEA Number for REI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LEA Public Schools</relationshipLabel>
        <relationshipName>LEA_Public_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolNumber__c</fullName>
        <label>School Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>LEA Public Schools</relationshipLabel>
        <relationshipName>LEA_Public_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LEA Public School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Public School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LEA Public Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>